# Miniproject-C2-19

./: CMakeLists.txt  README.md  package.xml
Soundplayer/: sound.cpp
src/: menu.cpp  script.cpp
